tests/snapshots/suppression/unmatched_off.input.py.snap
---
source: tests/integration.rs
expression: output
input_file: tests/fixtures/suppression/unmatched_off.input.py
---
"""
An unmatched fmt: off suppresses through end of file. Assignments
below it stay verbatim while the assignments above pad to their
group width.
"""

x       = 1
foo     = 2
bar_baz = 3

# fmt: off
short = 1
much_longer_name = 2
mid = 3
