tests/snapshots/suppression/yapf_aliases.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/suppression/yapf_aliases.input.py
---
align-equals@151..152
align-equals@159..160
align-equals@249..250
align-equals@256..257
