tests/snapshots/suppression/yapf_aliases.input.py.snap
---
source: tests/integration.rs
expression: output
input_file: tests/fixtures/suppression/yapf_aliases.input.py
---
"""
The yapf: disable / yapf: enable aliases produce the same suppressed span as
fmt: off / fmt: on, leaving the bracketed assignments verbatim.
"""

bar_baz = 3
foo     = 2
x       = 1

# yapf: disable
short = 1
much_longer_name = 2
mid = 3
# yapf: enable

a   = 1
bb  = 2
ccc = 3
